refactor: infrastructure
